# automacao_casa_do_zero

./: .gitignore  LICENSE  Makefile  README.md
C_server/src/: server.c
Esp01_Relé/: platformio.ini
Esp01_Relé/include/: user_config.h
Esp01_Relé/src/: main.c
Postman/: Automação casa.postman_collection.json
Server_principal/: CMakeLists.txt  Makefile
Server_principal/inc/: globais.h  http.h  server.h  string_fort.h
Server_principal/src/: http.c  server.c  string_fort.c
inc/: globais.h  http.h  server.h  string_fort.h
src/: http.c  server.c  string_fort.c
